pod-security-vpol/baseline/disallow-host-ports/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-host-ports
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
